--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,15 @@ jobs:
         with:  
           go-version: '1.22'  
   
-      # 3. 安装完整的交叉编译工具链  
+      # 3. 缓存 apt 包和安装完整的交叉编译工具链  
+      - name: Cache apt packages  
+        uses: actions/cache@v4  
+        with:  
+          path: |  
+            /var/cache/apt/archives  
+            /var/lib/apt/lists  
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/release.yml') }}  
+  
       - name: Install Cross-Compilation Toolchains  
         run: |  
           sudo apt-get update  
