--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,14 +31,9 @@ jobs:
           sudo apt-get update  
           sudo apt-get install -y \  
             build-essential \  
-            gcc \  
-            g++ \  
-            gcc-aarch64-linux-gnu \  
-            g++-aarch64-linux-gnu \  
-            gcc-arm-linux-gnueabihf \  
-            g++-arm-linux-gnueabihf \  
-            gcc-arm-linux-gnueabi \  
-            g++-arm-linux-gnueabi \  
+            crossbuild-essential-arm64 \  
+            crossbuild-essential-armhf \  
+            crossbuild-essential-armel \  
             libssl-dev \  
             libcurl4-openssl-dev \  
             pkg-config
