--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -313,7 +313,7 @@ changelog:
   
 release:  
   github:  
-    owner: theshdowaura  
+    owner: Turris-Babel  
     name: xixunyunsign  
   prerelease: auto  
   draft: false
